chỉnh login,register,homepage

--- a/src/components/authen-form/login.css
+++ b/src/components/authen-form/login.css
@@ -1,33 +1,22 @@
-.login-form {
-  /* Add styles for the login form container */
-}
-
-.login-form h2 {
-  /* Add styles for the heading */
-}
-
-.login-form .form-group {
-  /* Add styles for form groups (label + input) */
-  margin-bottom: 15px;
-}
-
-.login-form label {
-  /* Add styles for labels */
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.login-form input[type="email"], .login-form input[type="password"] {
-  /* Add styles for input fields */
+.login-form{
   width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 0px 30px;
+  display: flex;  
+  flex-direction: column; 
+}
+.a{
+  text-align: center;
+  color: black;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 25px;
 }
 
-.login-form button {
-  /* Add styles for the submit button (inherits from primary-btn in App.css) */
-  width: 100%;
-  padding: 10px;
-} 
+.align-left-item .ant-form-item-control-input-content {
+  text-align: left;
+}
+
+.align-left-item.ant-form-item .ant-form-item-control {
+  flex-direction: row;
+  justify-content: flex-start;
+}
