--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -76,7 +76,7 @@
   background-color: #4CAF50;
   color: white;
   border: none;
-  padding: 10px 15px;
+  padding: 10px 50px;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -84,5 +84,6 @@
 .footer-bottom {
   text-align: center;
   padding-top: 20px;
-  border-top: 1px solid #444;
+  border-top: 1px solid black;
 }
+
