--- a/src/components/authen-form/login.css
+++ b/src/components/authen-form/login.css
@@ -1,22 +1,11 @@
-.login-form{
+
+.login-form {
   width: 100%;
   padding: 0px 30px;
-  display: flex;  
-  flex-direction: column; 
 }
-.a{
+h1{
+  margin-bottom: 20px;
+  color: gray;
+  font-size: 50px;
   text-align: center;
-  color: black;
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 25px;
-}
-
-.align-left-item .ant-form-item-control-input-content {
-  text-align: left;
-}
-
-.align-left-item.ant-form-item .ant-form-item-control {
-  flex-direction: row;
-  justify-content: flex-start;
 }
