--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -21,20 +21,14 @@
   align-items: center;
 }
 
-.logo h1 {
-  margin: 0;
-  color: #4CAF50;
-  font-size: 24px;
-}
-
-.logo a {
+.logo {
   display: flex;
   align-items: center;
+
 }
 
 .logo-img {
-  display: block;
-  max-height: 50px; /* Adjusted as requested */
+  max-height: 50px; /* Tăng kích thước logo lên 150px */
   width: auto;
   margin-right: 20px; /* Space between logo and nav */
 }
